# MemoPvP

./: CMakeLists.txt  README.md  activity_name.txt  main.cpp  package_name.txt  savepoint.md  tbuild.sh
android/: AndroidManifest.xml
app/: CMakeLists.txt  main.cpp
app/qml/: Main.qml
assets/fonts/Buira/: license.txt
assets/hand-drawn-memory-game-cards/: 8490647.ai  8490648.eps
assets/shaders/: flip.frag  flip.vert
docs/: cmake_tips.md  cpp_tips.md  qrc.md
plugins/: CMakeLists.txt
plugins/core/: CMakeLists.txt  core.cpp  core.h
plugins/imageprovider/: CMakeLists.txt  imagedatamanager.cpp  imagedatamanager.h  imagepackprovider.cpp  imagepackprovider.h  imageproviderplugin.h
plugins/mycounter/: CMakeLists.txt  MyCounter.cpp  MyCounter.h
qml/: Main.qml
qml/Components/: CurveText.qml  MemoCard.qml  ShaderFlip.qml  SimpleFlip.qml
qml/Engines/: BoardManager.qml
qml/Pages/: InitPage.qml  TestPage.qml
src/: CMakeLists.txt
src/core/: CMakeLists.txt  appconfig.cpp  appconfig.h  boardgenerator.cpp  boardgenerator.h  boardmodel.cpp  boardmodel.h  cellitem.h  gameengine.cpp  gameengine.h  levelsinfo.cpp  levelsinfo.h
src/plugins/: CMakeLists.txt
src/plugins/imageprovider/: CMakeLists.txt  imagedatamanager.cpp  imagedatamanager.h  imagepackprovider.cpp  imagepackprovider.h  imageproviderplugin.h
tests/: CMakeLists.txt
tests/auto/tst_boardgenerator/: CMakeLists.txt  tst_testboardgenerator.cpp  tst_testboardgenerator.h
tests/auto/tst_imagedatamanager/: CMakeLists.txt  tst_imagedatamanager.cpp  tst_imagedatamanager.h
tools/: check_dep.sh
